--- a/src/pages/members/modal/member-modal.scss
+++ b/src/pages/members/modal/member-modal.scss
@@ -1,8 +1,8 @@
 @import "./../../../variables";
 #member-modal {
   @apply p-1 lg:p-0;
-  height: 30vh;
-  max-width: 300px;
+  height: 480px;
+  max-width: 450px;
   margin: auto;
   width: 100%;
   position: absolute;
@@ -63,7 +63,7 @@
             @apply w-full;
             display: flex;
             align-items: center;
-            height: 52px;
+            // height: 52px;
             width: 100%;
             .group {
               @apply lg:px-2 text-center mt-6;
@@ -81,7 +81,7 @@
             justify-content: space-evenly;
           }
           .form-control {
-            @apply mx-0 w-full;
+            @apply w-full;
           }
           .input-group {
             @apply flex items-center w-full xs:w-1/2 border border-gray-300 mt-6;
@@ -112,6 +112,6 @@
   }
 
   .btn-action {
-    @apply flex justify-end gap-x-3 pt-4 border-t xl:mt-auto;
+    @apply flex justify-end gap-x-3 pt-4 border-t mt-auto;
   }
 }
