--- a/src/pages/dashboard/dashboard.scss
+++ b/src/pages/dashboard/dashboard.scss
@@ -1,3 +1,40 @@
 .test-style {
     @apply bg-red-400 #{!important};
 }
+
+.chart-section {
+    height: 290px;
+    overflow-x: auto;
+    overflow-y:hidden;
+    display: flex;
+    gap: 2rem;
+    padding: 0.1rem;
+    margin-top: 1rem;
+
+    .card-chart-control {
+        padding: 5px;
+        min-width: 400px;
+        width: 33%;
+        height: 250px;
+        display: flex;
+        flex-direction: column;
+        border-radius: 7px;
+        background: #fff;
+        box-shadow: 0 3px 1px -2px rgba(0, 0, 0, 0.2), 0 2px 2px 0 rgba(0, 0, 0, 0.1411764706), 0 1px 5px 0 rgba(0, 0, 0, 0.1215686275);
+
+        .head-title {
+            display: flex;
+            width: 100%;
+            justify-content: space-between;
+            padding: 0 5px;
+        }
+
+        .card-body {
+            width: 100% !important;
+            height: 100% !important;
+            display: flex;
+            justify-content: center;
+            align-items: center;
+        }
+    }
+}
