--- a/src/pages/dashboard/dashboard.scss
+++ b/src/pages/dashboard/dashboard.scss
@@ -8,7 +8,7 @@
     justify-content: space-between;
 
     .date-picker {
-        display:flex;
+        display: flex;
     }
 }
 
@@ -17,35 +17,55 @@
     overflow-x: auto;
     overflow-y: hidden;
     display: flex;
-    gap: 2rem;
+    // flex-direction: column;
+    // align-items: end;
+    gap: 1rem;
     padding: 0.1rem;
     margin-top: 1rem;
 
-    .card-chart-control {
-        padding: 5px;
-        min-width: 400px;
-        width: 33%;
-        height: auto;
+    .pie-chart {
+        width: 50%;
+        border: 1px solid red;
+    }
+
+    .bar-chart {
         display: flex;
         flex-direction: column;
-        border-radius: 7px;
-        background: #fff;
-        box-shadow: 0 3px 1px -2px rgba(0, 0, 0, 0.2), 0 2px 2px 0 rgba(0, 0, 0, 0.1411764706),
-            0 1px 5px 0 rgba(0, 0, 0, 0.1215686275);
+        width: 50%;
+        gap: .5rem;
+        border: 1px solid red;
 
-        .head-title {
-            display: flex;
+        .card-chart-control {
+            padding: 5px;
+            min-width: 400px;
             width: 100%;
-            justify-content: space-between;
-            padding: 0 5px;
-        }
-
-        .card-body {
-            width: 100% !important;
-            height: 100% !important;
+            height: auto;
             display: flex;
-            justify-content: center;
-            align-items: center;
+            flex-direction: column;
+            border-radius: 7px;
+            background: #fff;
+            box-shadow: 0 3px 1px -2px rgba(0, 0, 0, 0.2), 0 2px 2px 0 rgba(0, 0, 0, 0.1411764706),
+                0 1px 5px 0 rgba(0, 0, 0, 0.1215686275);
+
+            .head-title {
+                display: flex;
+                width: 100%;
+                justify-content: space-between;
+                padding: 0 5px;
+            }
+
+            .card-body {
+                width: 100% !important;
+                // height: 100% !important;
+                // max-height: 200px;
+                display: flex;
+                justify-content: center;
+                align-items: center;
+                canvas {
+                    // width: 100% !important;
+                    max-height: 200px !important;
+                }
+            }
         }
     }
 }
