--- a/src/pages/dashboard/dashboard.scss
+++ b/src/pages/dashboard/dashboard.scss
@@ -17,23 +17,88 @@
     overflow-x: auto;
     overflow-y: hidden;
     display: flex;
+    min-width: 820px;
     // flex-direction: column;
     // align-items: end;
     gap: 1rem;
     padding: 0.1rem;
     margin-top: 1rem;
 
-    .pie-chart {
+    .donut-chart {
+        display: flex;
+        flex-direction: column;
         width: 50%;
-        border: 1px solid red;
+        padding: 20px;
+        border-radius: 7px;
+        background: #fff;
+        box-shadow: 0 3px 1px -2px rgba(0, 0, 0, 0.2), 0 2px 2px 0 rgba(0, 0, 0, 0.1411764706),
+            0 1px 5px 0 rgba(0, 0, 0, 0.1215686275);
+
+        .head-title {
+            display: flex;
+            justify-content: space-between;
+        }
+        .chart-content {
+            width: 100%;
+            height: 100%;
+            display: flex;
+            gap: 1rem;
+            padding: 1rem;
+
+            @media screen and (max-width: 1290px) {
+                flex-direction: column;
+
+                .content-left {
+                    width: 100% !important;
+                }
+
+                .content-right {
+                    width: 100% !important;
+                }
+            }
+
+            .content-left {
+                width: 50%;
+                height: inherit;
+                display: flex;
+                justify-content: center;
+                align-items: center;
+            }
+
+            .content-right {
+                width: 50%;
+                height: inherit;
+                display: flex;
+                align-items: center;
+                // justify-content: center;
+
+                .price-details {
+                    width: 100%;
+                    max-width: 185px;
+                    height: 155px;
+                    background: #3345eb;
+                    border-radius: 20px;
+                    box-shadow: -1px 20px 20px 0px rgba(4, 113, 255, 0.2), 5px 8px 19px 0px rgba(4, 113, 255, 0.2),
+                        3px 20px 19px 0px rgba(4, 113, 255, 0.2);
+                }
+            }
+        }
     }
 
     .bar-chart {
         display: flex;
         flex-direction: column;
         width: 50%;
-        gap: .5rem;
-        border: 1px solid red;
+        gap: 0.5rem;
+
+        .bar-chart-head {
+            display: flex;
+            justify-content: space-between;
+
+            @media screen and (max-width: 1290px) {
+                flex-direction: column;
+            }
+        }
 
         .card-chart-control {
             padding: 5px;
