--- a/src/pages/orders/orders.scss
+++ b/src/pages/orders/orders.scss
@@ -99,7 +99,7 @@
           gap: 1rem;
           .btn-custom {
             width: 110px;
-            margin: auto;
+            // margin: auto;
           }
         }
       }
